# k8s-llm-monitor

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: monitor.yaml
docs/: GCP_DEPLOYMENT.md  architecture.md
k8s/: namespace.yaml  rbac.yaml
k8s/configmaps/: monitor-config.yaml
k8s/deployments/: api-gateway.yaml  auto-scaler.yaml  llm-analyzer.yaml
k8s/services/: api-gateway-service.yaml  auto-scaler-service.yaml  llm-analyzer-service.yaml
monitoring/fluentd/: fluent.conf
monitoring/grafana/dashboards/: ai-monitor-dashboard.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: ai-monitor.yml
scripts/: apply_k8s_config.py  build.sh  cleanup.sh  deploy.sh  dev-setup.sh  generate_terraform_vars.py  get_project_config.py  terraform.sh  test.sh
src/: __init__.py
src/api/: __init__.py  main.py  models.py
src/monitor/: __init__.py  auto_scaler.py  config.py  log_analyzer.py
terraform/: README.md  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  test_auto_scaler.py  test_log_analyzer.py
